# NEWS

## BlueSky 3.x

### BlueSky 3.0

- Removed Comic Neue font

- Replaced Font-Awesome by Fork-Awesome

- Switched bootstrap version to bootstrap4

- Components :

  - Adopted a triple-collumn layout for the footer

  - New components : social media links

## BlueSky 2.x

### BlueSky 2.1

- Removed unused classes

- Renamed misleading classes

- Some style fixes

- Reorganized stylesheet

### BlueSky 2.0

- Remade the style entirely

- Used material design palette