@@ -171,79 +171,6 @@ a.list-group-item:hover {
 }
 .btn:active {
 	box-shadow: inset 0px 2px 0px rgba(0, 0, 0, 0.2);
-}
-
-/* ------------------ COULEURS ------------------- */
-
-.panel-primary > .panel-heading, .btn-primary {
-	background-color:#3f51b5;
-}
-
-.panel-danger > .panel-heading, .btn-danger {
-	background-color:#b71c1c;
-}
-
-.panel-warning > .panel-heading, .btn-warning {
-	background-color:#ff6f00;
-}
-
-.panel-success > .panel-heading, .btn-success {
-	background-color:#43a047;
-}
-
-.panel-info > .panel-heading, .btn-info {
-	background-color:#03a9f4;
-}
-
-.panel-dark > .panel-heading, .btn-dark {
-	background-color:#263238;
-	color:#FFF
-}
-
-.panel-blue > .panel-heading, .btn-blue {
-	background-color:#1976d2;
-	color:#FFF
-}
-
-.btn-primary:hover, .btn-primary:active {
-	background-color:#ab47bc;
-	color:#FFF;
-}
-
-.btn-success:hover, .btn-success:active {
-	background-color:#4caf50;
-	color:#FFF;
-}
-
-.btn-info:hover, .btn-info:active {
-	background-color:#4fc3f7;
-	color:#FFF;
-}
-
-.btn-warning:hover, .btn-warning:active {
-	background-color:#ffb300;
-	color:#FFF;
-}
-
-.btn-danger:hover, .btn-danger:active {
-	background-color:#e53935;
-	color:#FFF;
-}
-
-.btn-blue:hover, .btn-blue:active {
-	background-color:#1e88e5;
-	color:#FFF;
-}
-
-.btn-dark:hover, .btn-dark:active {
-	background-color:#455a64;
-	color:#FFF;
-}
-
-.btn-blue:hover, .btn-blue:active {
-	background-color:#2196f3;
-	color:#FFF;
-}
 
 /* ------------------ BREADCRUMB ------------------- */
 
