@@ -18,6 +18,7 @@
 		<link href="css/clear-typography.css" rel="stylesheet">
 
 		<link href="css/style.css" rel="stylesheet">
+		<link href="css/palette.css" rel="stylesheet">
 	</head>
 
 	<body>
