@@ -16,6 +16,12 @@
 
   - New components : social media links
 
+- New Palette based on a work by Tobias Bernard for the Fractal application
+
+  - Color that aren't based on semantics
+
+  - Branding colors for social networks
+
 ## BlueSky 2.x
 
 ### BlueSky 2.1
